--- a/account_basics/115001056608-app-passwords.md
+++ b/account_basics/115001056608-app-passwords.md
@@ -1,18 +1,16 @@
-<div id="container">
-
 # App Passwords
 
 Some providers require that you use an app password when authenticating your email account through Nylas Mail.
 
-<span class="wysiwyg-font-size-large">**What is an app password?**</span>
+**What is an app password?**
 
 An app password is a password generated specifically for use with a third-party application. Using an app password is more secure than using your regular account password.
 
-<span class="wysiwyg-font-size-large">**What are the security benefits of using app passwords?**</span>
+**What are the security benefits of using app passwords?**
 
 If you use an app password, you don't have to give your regular password to third-party applications. This reduces the risk of your regular password being stolen by malware. Additionally, app passwords are generated with many random characters, which makes it more difficult for malware programs to guess the password. In the unlikely case that an app password is successfully stolen by malware, you can easily revoke access by deleting the app password. Your other passwords will still be safe, so you don't have to go through the trouble of changing your password everywhere.
 
-<span class="wysiwyg-font-size-large">**Which providers require an app password?**</span>
+**Which providers require an app password?**
 
 Some providers always require an app password, while others only require an app password if you've enabled two-factor authentication (2FA). As we discover which providers have these requirements, we will list them here, but there may be others that are not currently listed.
 
@@ -25,9 +23,9 @@ Providers that always require an app password:
 
 *   Fastmail
 
-<span class="wysiwyg-font-size-large">**How do I generate an app password for my provider?**</span>
+**How do I generate an app password for my provider?**
 
-<span class="wysiwyg-font-size-large">Office365</span>
+Office365
 
 1.  Visit [https://account.activedirectory.windowsazure.com/AppPasswords.aspx](https://account.activedirectory.windowsazure.com/AppPasswords.aspx) and log in to your account if prompted.
 2.  Click "create" to create a new app password.
@@ -35,7 +33,7 @@ Providers that always require an app password:
 4.  Click "Copy password to clipboard."
 5.  In Nylas Mail, connect an Exchange account and use this password instead of your regular password.
 
-<span class="wysiwyg-font-size-large">iCloud</span>
+iCloud
 
 1.  Go to [https://appleid.apple.com/](https://appleid.apple.com/)
 2.  Click "Security," then "Edit." Create an app password. This is the password you should use with Nylas Mail.
@@ -43,7 +41,7 @@ Providers that always require an app password:
 
 You can read more about this process from Apple at their [Knowledge Base article](https://support.apple.com/en-us/HT204397).
 
-<span class="wysiwyg-font-size-large">Fastmail</span>
+Fastmail
 
 1.  Open the [Settings → Password & Security](https://www.fastmail.com/go/settings/security/) screen. Log in if prompted.
 2.  Enter your password at the top in order to be able to edit the settings.
@@ -53,4 +51,4 @@ You can read more about this process from Apple at their [Knowledge Base article
 6.  Click "Generate Password" and copy the shown password
 7.  In Nylas Mail, connect a Fastmail account with IMAP and use this password instead of your regular password.
 
-</div>
+
